Fri Sep 19 17:04:40 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* linear-algebra/cross.m: Use direct formula instead of calling
	det three times in a loop.  If both args are column (row) vectors,
	return a column (row) vector.  If they don't match, pay attention
	to the value of prefer_column_vectors.

Thu Aug 28 15:31:20 1997  Rolf Fabian <fabian@olymp.Umwelt.TU-Cottbus.de>

	* polynomial/polyvalm.m: Don't assume orthogonal eigenvectors for
	nonsymmetric matrices.

	* general/tril.m: Fix usage message.

	* polynomial/polyvalm.m: Fix error messages.
	* polynomial/polyderiv.m: Likewise.
	* polynomial/polyval.m: Likewise.

Wed Aug 13 14:14:16 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* strings/blanks.m: Allow blanks(0) to return empty string.
	Allow negative arguments if treat_neg_dim_as_zero is true.

Wed Jun 25 21:26:24 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* plot/mesh.m: Set noparametric plot mode after plotting.

Wed Jun 25 21:06:10 1997  Rick Niles <niles@axp745.gsfc.nasa.gov>

	* plot/__pltopt__.m: Handle key/legend names.
	Correctly set colors, line styles, and point styles.

Wed Jun 25 13:34:06 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* polynomial/polyfit.m: Return fit y values as second output.
	Don't use QR factorization to solve least squares problem.

Wed Jun 18 10:24:00 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* control/dlqr.m: Use ao, not a, to compute k.

Tue Jun  3 12:16:00 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* miscellaneous/path.m: New file.

Wed May 21 11:45:31 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* miscellaneous/bug_report.m: Pass file id to dump_prefs, not file
	name.

Mon May 12 02:04:01 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* specfun/erfinv.m: Add missing semicolon.

Wed Apr  2 22:04:03 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* miscellaneous/xor.m: Make type of return value logical.

Fri Mar 28 16:19:53 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>
